# agent-memory

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  codecov.yml  pyproject.toml
.github/workflows/: ci.yml  trigger-labs-build.yml
deploy/cloudrun/: Dockerfile
deploy/mcpb/: README.md  manifest.json
docs/: IMPLEMENTATION_PLAN_RELATION_STORAGE.md  LIBRARY_IMPROVEMENT_SUGGESTIONS.md  antora-playbook.yml  antora.yml  configuration.adoc  entity-extraction.adoc  getting-started.adoc  index.adoc  integrations.adoc  memory-types.adoc  package-lock.json  poleo-model.adoc  product-improvements.adoc
docs/tutorials/: microsoft-agent-memory.adoc
examples/: README.md  basic_usage.py  enrichment_example.py  langchain_agent.py  pydantic_ai_agent.py
examples/audit-trail/: README.md  main.py  queries.cypher  tool_calls.py
examples/aws-financial-services-advisor/: COMPARISON.md  GETTING_STARTED.md  Makefile  README.md  REVIEW.md
examples/buffered-writes/: README.md  main.py
examples/full-stack-chat-agent/backend/: .env.example  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt
examples/full-stack-chat-agent/backend/src/: __init__.py  config.py  main.py
examples/full-stack-chat-agent/backend/src/agent/: __init__.py  agent.py  dependencies.py  tools.py
examples/full-stack-chat-agent/backend/src/api/: schemas.py
examples/full-stack-chat-agent/backend/src/api/routes/: __init__.py  chat.py  memory.py  threads.py
examples/full-stack-chat-agent/backend/src/memory/: __init__.py  client.py
tests/: conftest.py
(+369 files in other folders)
